Fix: date validation

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -29,7 +29,7 @@ exception.CargoTypeNotFound=Cargo type not found
 
 #Validation
 #Custom Validators
-validation.AlertDate=Departure date cannot be after arrival date
+validation.AlertDate=toDate must be before fromDate
 validation.RequireImage=Image is required
 validation.ImageType=Invalid image type
 validation.DateValidation=Date validation error
@@ -69,6 +69,7 @@ validation.Description=Description should be shorter than 250 characters
 validation.fromDate=Select a valid date format
 validation.toDate=Select a valid date format
 validation.Action=Action must be either "ACCEPT" or "REJECT"
+validation.DateFormat=Invalid date format
 
 # ------------- CargoTypes ------------
 cargoType.Hazardous=Hazardous
