--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -70,6 +70,8 @@ validation.Description=La descripción debe tener menos de 250 caracteres
 validation.fromDate=Seleccione un formato de fecha válido
 validation.toDate=Seleccione un formato de fecha válido
 validation.Action=La acción debe ser "ACCEPT" o "REJECT"
+validation.DateFormat=Formato de fecha inválido
+
 
 # ------------- CargoType ------------
 cargoType.Hazardous=Peligrosa
