Feat: exception handling in image endpoint

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -26,6 +26,7 @@ exception.AlertNotFound=Alert not found
 exception.AlertAlreadyExists=You already have an existent alert
 exception.CounterOfferAlreadyExists=You already have an existent counter-offer for this trip
 exception.CargoTypeNotFound=Cargo type not found
+exception.ResizeImage=Error while resizing image
 
 #Validation
 #Custom Validators
