--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -26,6 +26,7 @@ exception.AlertNotFound=Alerta no encontrada
 exception.AlertAlreadyExists=Ya tiene una alerta existente
 exception.CounterOfferAlreadyExists=Ya tiene una contraoferta para este viaje
 exception.CargoTypeNotFound=Tipo de carga no encontrado
+exception.ResizeImage=Error al redimensionar la imagen
 
 
 #Validation
