Chore: validation by existent cities

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -39,6 +39,7 @@ validation.ConfirmPassword=Passwords must match
 validation.CargoType=Select a valid cargo type
 validation.TruckerLicensePlate=Enter a license plate
 validation.EmptyBody=Body cannot be empty
+validation.City=Select a valid city
 #NotCustomValidators
 validation.NotNull=This field is required
 validation.LicensePlate=Invalid license plate
