--- a/Front/public/locales/en/translations.json
+++ b/Front/public/locales/en/translations.json
@@ -1,4 +1,38 @@
 {
+    "landing": {
+      "ThisIs": "This is",
+      "Truckr": "Truckr.",
+      "ThisIsTruckr": "This is Truckr.",
+      "LandingMainMessage": "The platform that connects drivers and cargo providers.",
+      "LandingMainSubMessage": "Choose a role as trucker or provider and start trucking!",
+      "TrustworthyTruckers": "Trustworthy drivers.",
+      "TrustworthyTruckersMessage": "Our team is big! We count with great drivers to make sure your cargo gets to its destination safely and efficiently.",
+      "EconomicSolutions": "Inexpensive solutions.",
+      "EconomicSolutionsMessage": "We work with a wide variety of trip offers for you to compare prices and select your company's best fit.",
+      "ExploitReturns": "Capitalize on returns!",
+      "ExploitReturnsMessage": "Offer your truck's empty space and cash in on your trip's returns.",
+      "BookATrucker": "Book a trucker",
+      "DriveWithTruckr": "Drive with Truckr",
+      "NewLanding1": "Browse the cargo that is available. Filter however is more convenient for you",
+      "NewLanding2": "Select the best cargo option for you",
+      "NewLanding3": "Select the cargo that you want to ship and send an offer",
+      "OneMoreStep": "One more step",
+      "NewLanding4": "Wait for the cargo provider to confirm your offer. You can always modify it or send a counteroffer if you want",
+      "ShipitE": "Ship it!",
+      "NewLanding5": "Once the order is confirmed, get in touch with the provider and ship the cargo",
+      "CreateCustomSearch": "Create a custom search according to your needs",
+      "SelectBestTrip": "Select the best trip for you",
+      "SelectBestTripsOffer": "Select the trip that best fits your needs and send an offer",
+      "WaitForConfirmation": "Wait for the trucker to confirm your offer. You can always modify it or send a counteroffer if you want",
+      "WaitForItE": "Wait for it!",
+      "GetInTouch": "Once the trucker confirms your offer you can get in touch with him and wait for your cargo",
+      "HowTruckrWorks": "How does Truckr work?",
+      "ForTrucker": "For Truckers",
+      "ForProvider": "For Providers",
+      "BrowseCargo": "Browse Cargo"
+    }
+,
+
     "greeting": {
       "hello": "Hello World!"
     },
