feat: offers flow + lots of ui fixes

--- a/Front/public/locales/en/translations.json
+++ b/Front/public/locales/en/translations.json
@@ -88,7 +88,8 @@
     },
 
     "pastTrips": {
-        "lastUpdate": "Last Update"
+        "lastUpdate": "Last Update",
+        "noPastTrips": "You haven't completed any trips yet"
     },
 
     "trip": {
