--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -27,6 +27,7 @@ exception.AlertAlreadyExists=Ya tiene una alerta existente
 exception.CounterOfferAlreadyExists=Ya tiene una contraoferta para este viaje
 exception.CargoTypeNotFound=Tipo de carga no encontrado
 exception.ResizeImage=Error al redimensionar la imagen
+exception.Unauthorized=Invalid credentials
 
 
 #Validation
