feat: final translations

--- a/Front/public/locales/en/translations.json
+++ b/Front/public/locales/en/translations.json
@@ -17,6 +17,7 @@
       "NewLanding2": "Select the best cargo option for you",
       "NewLanding3": "Select the cargo that you want to ship and send an offer",
       "OneMoreStep": "One more step",
+      "OneMoreStepMessage": "Wait for the cargo provider to confirm your offer. You can always modify it or send a counteroffer if you want.",
       "NewLanding4": "Wait for the cargo provider to confirm your offer. You can always modify it or send a counteroffer if you want",
       "ShipitE": "Ship it!",
       "NewLanding5": "Once the order is confirmed, get in touch with the provider and ship the cargo",
@@ -29,12 +30,23 @@
       "HowTruckrWorks": "How does Truckr work?",
       "ForTrucker": "For Truckers",
       "ForProvider": "For Providers",
+      "browseTrip": "1. Browse Trip",
+      "browseTripSubtitle": "Browse available trips. Filter however is more convenient for you.",
+      "selectTrucker": "2. Select the best trucker option for you",
+      "selectTruckerSubtitle": "Select the trucker that you want to ship with and send an offer.",
+      "oneMoreStep": "3. One more step",
+      "oneMoreStepSubtitle": "Wait for the trucker to confirm your offer. You can always modify it or send a counteroffer if you want.",
+      "shipIt": "4. Ship it!",
+      "shipItSubtitle": "Once the order is confirmed, get in touch with the trucker and ship the cargo.",
       "BrowseCargo": "Browse Cargo",
+      "BrowseTrips": "Browse Trips",
       "SearchTrips": "Search Trips",
       "myItinerary": "My Itinerary",
       "MyPublications": "My Publications",
       "SentOffers": "Sent Offers",
-      "MyAlerts": "My Alert"
+      "MyAlerts": "My Alert",
+      "norequestFound": "No cargo found",
+      "notripFound": "No trips found"
     }
 ,
     "provider": "Provider" ,
