--- a/Front/public/locales/es/translations.json
+++ b/Front/public/locales/es/translations.json
@@ -17,6 +17,7 @@
     "NewLanding2": "Elegí el cargamento que más te convenga",
     "NewLanding3": "Elegí el cargo que querés llevar y envía una oferta",
     "OneMoreStep": "Un paso más",
+    "OneMoreStepMessage": "Espera a que el proveedor te confirme la oferta. Siempre podés modificarla o mandarle una contraoferta",
     "NewLanding4": "Espera a que el proveedor te confirme la oferta. Siempre podés modificarla o mandarle una contraoferta",
     "ShipitE": "Envíalo!",
     "NewLanding5": "Una vez que se confirme la orden, comunícate con el proveedor y envía el cargamento",
@@ -29,13 +30,23 @@
     "HowTruckrWorks": "Cómo funciona Truckr?",
     "ForTrucker": "Para Camioneros",
     "ForProvider": "Para Proveedores",
+    "browseTrip": "1. Explorar viajes",
+    "browseTripSubtitle": "Explora viajes disponibles. Filtra de la manera que te sea más conveniente.",
+    "selectTrucker": "2. Selecciona la mejor opción de transportista para ti",
+    "selectTruckerSubtitle": "Selecciona el transportista con el que deseas enviar y haz una oferta.",
+    "oneMoreStep": "3. Un paso más",
+    "oneMoreStepSubtitle": "Espera a que el transportista confirme tu oferta. Siempre puedes modificarla o enviar una contraoferta si lo deseas.",
+    "shipIt": "4. ¡Envíalo!",
+    "shipItSubtitle": "Una vez confirmado el pedido, ponte en contacto con el transportista y envía la carga.",
     "BrowseCargo": "Buscar Cargamento",
     "BrowseTrips": "Buscar Viajes",
     "SearchTrips": "Buscar Viajes",
     "myItinerary": "Mi Itinerario",
     "MyPublications": "Mis Publicaciones",
     "SentOffers": "Ofertas Enviadas",
-    "MyAlert": "Mi Alerta"
+    "MyAlert": "Mi Alerta",
+    "noCargoFound": "No se encontraron cargamentos",
+    "noTripsFound": "No se encontraron viajes"
   }
 ,
   "provider": "Proveedor",
