--- a/Front/src/locales/es/translations.json
+++ b/Front/src/locales/es/translations.json
@@ -358,6 +358,35 @@
     "sendOffer": "Enviar Oferta",
     "enterDescription": "Ingresa tu descripción",
     "priceRange": "La oferta debe estar entre $1 y $1000000"
+  },
+
+  "pageTitles": {
+    "error403": "Error 403",
+    "error404": "Error 404",
+    "error500": "Error 500",
+    "browseTrips": "Buscar Viajes",
+    "browseRequests": "Buscar Cargamento",
+    "createAlert": "Crear Alerta",
+    "createTrip": "Crear Publicación",
+    "editProfile": "Editar Perfil",
+    "home": "Inicio",
+    "manageTrip": "Administrar Viaje",
+    "manageRequest": "Administrar Cargamento",
+    "myAlert": "Mi Alerta",
+    "myItinerary": "Mi Itinerario",
+    "myPublications": "Mis Publicaciones",
+    "pastTrips": "Viajes Pasados",
+    "profile": "Perfil de Usuario",
+    "requestDetails": "Detalles del Cargamento",
+    "tripDetails": "Detalles del Viaje",
+    "register": "Registro",
+    "resetPassword": "Restablecer Contraseña",
+    "resetPasswordRequest": "Solicitud de Restablecimiento de Contraseña",
+    "searchTrips": "Buscar Viajes",
+    "sendCounterOffer": "Enviar Contraoferta",
+    "sentOffers": "Ofertas Enviadas",
+    "verifyAccount": "Verificar Cuenta"
   }
+
 }
   
