fix: last fixes browseTrips

--- a/Front/src/locales/en/translations.json
+++ b/Front/src/locales/en/translations.json
@@ -231,7 +231,8 @@
     "price": "Price",
     "cargoType": "Cargo Type",
     "dateRange": "Date Range",
-    "sortBy": "Sort by"
+    "sortBy": "Sort by",
+    "reset": "Clear filters"
   },
 
   "validation": {
